--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-tabs": "^6.1.0",
     "sass": "^1.83.1"
   },
   "devDependencies": {
